Completed initial Electron integration.

--- a/package.json
+++ b/package.json
@@ -18,27 +18,26 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@webpack-cli/serve": "^1.6.0",
     "babel-loader": "^8.0.4",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
+    "csp-html-webpack-plugin": "^5.1.0",
     "css-loader": "^1.0.1",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.21.5",
-    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^5.4.0",
+    "kill-port": "^1.6.1",
     "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
+    "wait-on": "^6.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.3.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-dev-server": "^4.3.1"
   },
   "scripts": {
-    "start": "node ./server/server.js",
-    "build": "webpack",
-    "dev": "concurrently \"webpack serve --hot\" \"nodemon ./server/server.js\"",
-    "e": "electron .",
+    "start": "NODE_ENV='production' concurrently 'node ./server/server.js' 'electron .'",
+    "build": "NODE_ENV='production' webpack",
+    "dev": "NODE_ENV='development' concurrently 'kill-port 3000' 'webpack serve' 'nodemon ./server/server.js' 'wait-on tcp:8080 && electron .'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
