--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
