--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^4.0.1",
     "electron": "^15.3.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
