--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
-    "react-router-dom": "^5.3.0"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
