Edit deployment files

--- a/infra/grafana/grafana-deployment copy.yaml
+++ b/infra/grafana/grafana-deployment copy.yaml
@@ -16,105 +16,111 @@ spec:
         app: grafana
     spec:
       containers:
-      - env: []
-        image: grafana/grafana:6.7.4
-        name: grafana
-        ports:
-        - containerPort: 3000
-          name: http
-        readinessProbe:
-          httpGet:
-            path: /api/health
-            port: http
-        resources:
-          limits:
-            cpu: 200m
-            memory: 200Mi
-          requests:
-            cpu: 100m
-            memory: 100Mi
-        volumeMounts:
-        - mountPath: /var/lib/grafana
-          name: grafana-storage
-          readOnly: false
-        - mountPath: /etc/grafana/provisioning/datasources
-          name: grafana-datasources
-          readOnly: false
-        - mountPath: /etc/grafana/provisioning/dashboards
-          name: grafana-dashboards
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/nodeexporter
-          name: grafana-dashboard-nodeexporter
-          readOnly: false  
-        - mountPath: /grafana-dashboard-definitions/0/apiserver
-          name: grafana-dashboard-apiserver
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/cluster-total
-          name: grafana-dashboard-cluster-total
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/controller-manager
-          name: grafana-dashboard-controller-manager
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
-          name: grafana-dashboard-k8s-resources-cluster
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
-          name: grafana-dashboard-k8s-resources-namespace
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-node
-          name: grafana-dashboard-k8s-resources-node
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
-          name: grafana-dashboard-k8s-resources-pod
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
-          name: grafana-dashboard-k8s-resources-workload
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
-          name: grafana-dashboard-k8s-resources-workloads-namespace
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/kubelet
-          name: grafana-dashboard-kubelet
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/namespace-by-pod
-          name: grafana-dashboard-namespace-by-pod
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/namespace-by-workload
-          name: grafana-dashboard-namespace-by-workload
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
-          name: grafana-dashboard-node-cluster-rsrc-use
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
-          name: grafana-dashboard-node-rsrc-use
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/nodes
-          name: grafana-dashboard-nodes
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
-          name: grafana-dashboard-persistentvolumesusage
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/pod-total
-          name: grafana-dashboard-pod-total
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/prometheus-remote-write
-          name: grafana-dashboard-prometheus-remote-write
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/prometheus
-          name: grafana-dashboard-prometheus
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/proxy
-          name: grafana-dashboard-proxy
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/scheduler
-          name: grafana-dashboard-scheduler
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/statefulset
-          name: grafana-dashboard-statefulset
-          readOnly: false
-        - mountPath: /grafana-dashboard-definitions/0/workload-total
-          name: grafana-dashboard-workload-total
-          readOnly: false
+        - env:
+            - name: GF_SECURITY_ALLOW_EMBEDDING
+              value: 'true'
+            - name: GF_AUTH_ANONYMOUS_ENABLED
+              value: 'true'
+            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
+              value: 'Admin'
+          image: grafana/grafana:6.7.4
+          name: grafana
+          ports:
+            - containerPort: 3000
+              name: http
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: http
+          resources:
+            limits:
+              cpu: 200m
+              memory: 200Mi
+            requests:
+              cpu: 100m
+              memory: 100Mi
+          volumeMounts:
+          - mountPath: /var/lib/grafana
+            name: grafana-storage
+            readOnly: false
+          - mountPath: /etc/grafana/provisioning/datasources
+            name: grafana-datasources
+            readOnly: false
+          - mountPath: /etc/grafana/provisioning/dashboards
+            name: grafana-dashboards
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/nodeexporter
+            name: grafana-dashboard-nodeexporter
+            readOnly: false  
+          - mountPath: /grafana-dashboard-definitions/0/apiserver
+            name: grafana-dashboard-apiserver
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/cluster-total
+            name: grafana-dashboard-cluster-total
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/controller-manager
+            name: grafana-dashboard-controller-manager
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
+            name: grafana-dashboard-k8s-resources-cluster
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
+            name: grafana-dashboard-k8s-resources-namespace
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-node
+            name: grafana-dashboard-k8s-resources-node
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
+            name: grafana-dashboard-k8s-resources-pod
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
+            name: grafana-dashboard-k8s-resources-workload
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
+            name: grafana-dashboard-k8s-resources-workloads-namespace
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/kubelet
+            name: grafana-dashboard-kubelet
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/namespace-by-pod
+            name: grafana-dashboard-namespace-by-pod
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/namespace-by-workload
+            name: grafana-dashboard-namespace-by-workload
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
+            name: grafana-dashboard-node-cluster-rsrc-use
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
+            name: grafana-dashboard-node-rsrc-use
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/nodes
+            name: grafana-dashboard-nodes
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
+            name: grafana-dashboard-persistentvolumesusage
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/pod-total
+            name: grafana-dashboard-pod-total
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/prometheus-remote-write
+            name: grafana-dashboard-prometheus-remote-write
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/prometheus
+            name: grafana-dashboard-prometheus
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/proxy
+            name: grafana-dashboard-proxy
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/scheduler
+            name: grafana-dashboard-scheduler
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/statefulset
+            name: grafana-dashboard-statefulset
+            readOnly: false
+          - mountPath: /grafana-dashboard-definitions/0/workload-total
+            name: grafana-dashboard-workload-total
+            readOnly: false
       nodeSelector:
         beta.kubernetes.io/os: linux
       securityContext:
