--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/x-data-grid": "^4.0.1",
+    "axios": "^0.24.0",
     "electron": "^15.3.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
