--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,13 @@ name: CI
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: 
+    - main
+    - dev
   pull_request:
-    branches: [ main, dev ]
+    branches:
+    - main
+    - dev
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
