--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.176",
+    "@types/material-ui": "^0.21.12",
     "@types/react-router-dom": "^5.3.2",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.0.4",
