--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "cross-env": "^6.0.3",
     "csp-html-webpack-plugin": "^5.1.0",
     "css-loader": "^1.0.1",
-    "eslint": "^7.17.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.4.0",
     "jest": "^27.3.1",
     "jest-canvas-mock": "^2.3.1",
