--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-graph-vis": "^1.0.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
