--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@mui/types": "^7.1.4",
     "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.47",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.0.4",
     "concurrently": "^5.0.0",
@@ -52,6 +54,7 @@
     "kill-port": "^1.6.1",
     "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
+    "typescript": "^4.7.4",
     "wait-on": "^6.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.3.0",
