--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.47",
+    "@types/vis": "^4.21.24",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.0.4",
     "concurrently": "^5.0.0",
